@@ -3,7 +3,7 @@ dnl	This file is an input file used by the GNU "autoconf" program to
 dnl	generate the file "configure", which is run during Tk installation
 dnl	to configure the system for the local environment.
 #
-# RCS: @(#) $Id: configure.in,v 1.162 2009/01/16 20:55:12 dgp Exp $
+# RCS: @(#) $Id: configure.in,v 1.163 2009/03/14 17:35:04 dkf Exp $
 
 AC_INIT([tk],[8.6])
 AC_PREREQ(2.59)
@@ -749,5 +749,6 @@ AC_SUBST(REZ_FLAGS)
 AC_CONFIG_FILES([
     Makefile:../unix/Makefile.in
     tkConfig.sh:../unix/tkConfig.sh.in
+    tk.pc:../unix/tk.pc.in
 ])
 AC_OUTPUT
