@@ -1,0 +1,16 @@
+# tk pkg-config source file
+# $Id: tk.pc.in,v 1.1 2009/03/14 17:35:03 dkf Exp $
+
+prefix=@prefix@
+exec_prefix=@exec_prefix@
+libdir=@libdir@
+includedir=@includedir@
+
+Name: The Tk Toolkit
+Description: Tk is a cross-platform graphical user interface toolkit, the standard GUI not only for Tcl, but for many other dynamic languages as well.
+URL: http://www.tcl.tk/
+Version: @TK_VERSION@
+Requires:
+Conflicts:
+Libs: -L${libdir} @TK_LIBS@
+Cflags: -I${includedir}
